--- a/eval_basic/ui_dep/as8580_gui_eval_basic.ini
+++ b/eval_basic/ui_dep/as8580_gui_eval_basic.ini
@@ -1,4 +1,4 @@
-[AS8580_eval_GUI]
+[as8580_gui_eval_basic]
 server.app.propertiesEnabled=True
 server.ole.enabled=True
 server.tcp.serviceName="My Computer/VI Server"
